# bachelor-wasm-inspectify

./: Cargo.toml  DiffForTapi.diff  Justfile
.github/workflows/: wasm_inspectify.yml
apps/chip/: package-lock.json
apps/inspectify/: package-lock.json  package.json  svelte.config.js
apps/inspectify/src/lib/: api.ts  events.svelte.ts  io.svelte.ts  jobs.svelte.ts
apps/inspectify/src/lib/components/: Env.svelte  Network.svelte  StatusBar.svelte
apps/inspectify/src/routes/: +page.svelte
apps/inspectify/src/routes/(inspectify)/: +layout.svelte
apps/inspectify/src/routes/(inspectify)/env/: +layout.svelte
apps/inspectify/src/routes/(inspectify)/env/BiGCL/: +page.svelte
apps/inspectify/src/routes/(inspectify)/env/Parser/: +page.svelte
crates/ce-core/: Cargo.toml
crates/chip/: Cargo.toml
crates/envs/ce-bigcl/: Cargo.toml
crates/envs/ce-bigcl/src/: lib.rs
crates/envs/ce-calculator/: Cargo.toml
crates/envs/ce-calculator/src/: lib.rs
crates/envs/ce-compiler/: Cargo.toml
crates/envs/ce-compiler/src/: lib.rs
crates/envs/ce-interpreter/: Cargo.toml
crates/envs/ce-interpreter/src/: lib.rs
crates/envs/ce-parser/: Cargo.toml
crates/envs/ce-parser/src/: lib.rs
crates/envs/ce-riscv/: Cargo.toml
crates/envs/ce-riscv/src/: lib.rs
crates/envs/ce-security/: Cargo.toml
crates/envs/ce-security/src/: lib.rs
crates/envs/ce-sign/: Cargo.toml
crates/envs/ce-sign/src/: lib.rs
crates/inspectify-wasm/: Cargo.toml
crates/inspectify-wasm/src/: lib.rs
crates/stdx/: Cargo.toml
crates/stdx/src/: lib.rs
(+1 files in other folders)
