[package]
name = "ce-bigcl"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
indexmap.workspace = true
ce-core.workspace = true
gcl.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
stdx.workspace = true
tapi.workspace = true
tracing.workspace = true
getrandom = { version = "0.3.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib", "rlib"]

