[package]
name = "ce-interpreter"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ce-core.workspace = true
gcl.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
stdx.workspace = true
tapi.workspace = true
tracing.workspace = true
getrandom = { version = "0.3.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib", "rlib"]

